I removed references to specific data sets in chapter 17

--- a/98_exercises.Rmd
+++ b/98_exercises.Rmd
@@ -207,8 +207,8 @@ functions explained in chapter \@ref(import-from-file). You can also check the
 
 ### Preliminary exploration
 
-1. Import the mia package, load peerj13075 with `data` and store it into a
-   variable named `tse`.
+1. Import the mia package, load any of the example data sets mentioned in Chapter 3.3
+   with `data` and store it into a variable named `tse`.
 2. Get a summary about the TreeSE with `summary`. What is the mean count across
    samples? How many features recur only once (singletons)?
 3. Check the dimensions of the TreeSE with `dim` or alternatively with `nrow`
@@ -221,8 +221,8 @@ functions explained in chapter \@ref(import-from-file). You can also check the
 
 ### Assay retrieval
 
-1. Import the mia package, load peerj13075 with `data` and store it into a
-   variable named `tse`.
+1. Import the mia package, load any of the example data sets mentioned in Chapter 3.3 
+   with `data` and store it into a variable named `tse`.
 2. List the names of all available assays with `assayNames`.
 3. Fetch the list of assays with `assays`.
 4. Retrieve the first assay of the TreeSE with `assay`, where the second
@@ -234,8 +234,8 @@ got stuck, you can refer to chapter \@ref(assay-slot) of this book.
 
 ### Sample information 
 
-1. Import the mia package, load peerj13075 with `data` and store it into a
-   variable named `tse`.
+1. Import the mia package, load any of the example data sets mentioned in Chapter 3.3
+   with `data` and store it into a variable named `tse`.
 2. Check the names of the samples with `colnames`.
 3. List the information on samples available in colData with `names`.
 4. Visualize the colData with `View` and briefly look at the information stored
@@ -245,8 +245,8 @@ got stuck, you can refer to chapter \@ref(assay-slot) of this book.
 
 ### Feature information
 
-1. Import the mia package, load peerj13075 with `data` and store it into a
-   variable named `tse`.
+1. Import the mia package, load any of the example data sets mentioned in Chapter 3.3
+   with `data` and store it into a variable named `tse`.
 2. Check the names of the features with `rownames`.
 3. List the information on features available in rowData with `names`.
 4. Visualize the rowData with `View` and briefly look at the information stored
@@ -266,8 +266,8 @@ row trees, respectively.
 Try to extract some of the other TreeSE elements listed in chapter \@ref(containers).
 However, such data are not always included.
 
-1. Import the mia package, load peerj13075 with `data` and store it into a
-   variable named `tse`.
+1. Import the mia package, load any of the example data sets mentioned in Chapter 3.3
+   with `data` and store it into a variable named `tse`.
 2. Fetch the metadata of the TreeSE. Is there any iformation available?
 3. Access the phylogenetic tree with `rowTree`. How big is it in terms of tips
    and nodes. If you like you can visualize it with `ggtree`.
@@ -321,8 +321,8 @@ Useful functions: nrow, ncol, dim, summary, table, quantile, unique, transformAs
 
 ### Assay transformation
 
-1. Import the mia package, load peerj13075 with `data` and store it into a
-   variable named `tse`.
+1. Import the mia package, load any of the example data sets mentioned in Chapter 3.3
+   with `data` and store it into a variable named `tse`.
 2. Transform the counts assay into relative abundances with `transformAssay` and
    store it into the TreeSE as an assay named `relabund` (see chapter \@ref(assay-transform)).
 3. Similarly, perform a clr transformation on the counts assay with a `pseudocount`
@@ -339,8 +339,9 @@ Useful functions: nrow, ncol, dim, summary, table, quantile, unique, transformAs
 
 ### Taxonomic levels
 
-1. Import the mia package, load peerj13075 with `data` and store it into a
-   variable named `tse`.
+1. Import the mia package, load one of the example data sets mentioned in Chapter 3.3
+   with `data` (you need one with taxonomic information at Phylum level) 
+   and store it into a variable named `tse`.
 2. List the available taxonomic ranks in the data with `taxonomyRanks`.
 3. Agglomerate the data to Phylum level with `mergeFeaturesByRank` and the
    appropriate value for `Rank`.
@@ -354,7 +355,8 @@ Useful functions: nrow, ncol, dim, summary, table, quantile, unique, transformAs
 
 ### Alternative experiments
 
-1. Import the mia package, load GlobalPatterns with `data` and store it into a
+1. Import the mia package, load one of the example data sets mentioned in Chapter 3.3
+   with `data` (you need one with taxonomic information) with `data` and store it into a
    variable named `tse`.
 2. Check the taxonomic ranks of the features with `taxonomyRanks`. What is the
    deepest taxonomic rank available?
@@ -371,8 +373,8 @@ Useful functions: nrow, ncol, dim, summary, table, quantile, unique, transformAs
 
 ### Estimation
 
-1. Import the mia package, load GlobalPatterns with `data` and store it into a
-   variable named `tse`.
+1. Import the mia package, load load any of the example data sets mentioned in Chapter 3.3
+   with `data` and store it into a variable named `tse`.
 2. Calculate multiple alpha diversity indices with `estimateDiversity` without
    any additional arguments.
 3. Check the names of colData with `names`. Can you identify which columns
@@ -384,8 +386,8 @@ Useful functions: nrow, ncol, dim, summary, table, quantile, unique, transformAs
 
 ### Visualization 
 
-1. Import the mia and scater packages, load GlobalPatterns with `data` and store
-   it into a variable named `tse`.
+1. Import the mia and scater packages, load load any of the example data sets mentioned in Chapter 3.3
+   with `data` and store it into a variable named `tse`.
 2. Calculate Shannon diversity index and Faith's phylogenetic diversity with
    `estimateDiversity` and the appropriate arguments for `index`.
 3. Make a boxplot of Shannon diversity on the y axis and sample type on the x
@@ -399,8 +401,8 @@ Useful functions: nrow, ncol, dim, summary, table, quantile, unique, transformAs
    
 ### Correlation
 
-1. Import the mia and scater packages, load peerj13075 with `data` and store it
-   into a variable named `tse`.
+1. Import the mia and scater packages, load load any of the example data sets mentioned in Chapter 3.3
+   with `data` and store it into a variable named `tse`.
 2. Calculate coverage and Shannon diversity index with `estimateDiversity` and
     the appropriate arguments for `index`.
 4. Test the correlation between the two indices with `cor.test`. Remember that
@@ -422,8 +424,8 @@ represent an important analysis in several studies.
 
 ### Differences between groups
 
-1. Import the mia package, load peerj13075 with `data` and store it into a
-   variable named `tse`.
+1. Import the mia package, load any of the example data sets mentioned in Chapter 3.3
+   with `data` and store it into a variable named `tse`.
 2. Calculate the Gini-Simpson diversity with `estimateDiversity` and the
    appropriate argument for `index`. Set `name` to `simpson`. You will use this
    name to access the diversity index from colData.
@@ -512,8 +514,8 @@ composition. Significance of each variable on beta diversity is tested with
 PERMANOVA (point 4) and the homogeneity assumption is also be controlled with a
 PERMDISP2 analysis (point 5).
 
-1. Import the mia and vegan packages, load peerj13075 with `data` and store it
-   into a variable named `tse`.
+1. Import the mia and vegan packages, load any of the example data sets mentioned in Chapter 3.3
+   with `data` and store it into a variable named `tse`.
 2. Transform the `counts` assay into relative abundances with `transformAssay`.
 3. Extract the relative abundance assay, transpose it and save it into
    a variable named `relabund_assay`.
@@ -542,8 +544,8 @@ variables (point 3). The results of RDA are usually assessed with PERMANOVA
 exercise. This is a relatively complex procedure, but the way this is broken
 down into steps below will hopefully make more sense.
 
-1. Import the mia and vegan packages, load peerj13075 with `data` and store it
-   into a variable named `tse`.
+1. Import the mia and vegan packages, load any of the example data sets mentioned in Chapter 3.3
+   with `data` and store it into a variable named `tse`.
 2. Transform the `counts` assay into relative abundances with `transformAssay`.
 3. Perform RDA with `calculateRDA` to see how much Diet can explain the relative
    abundance assay (`formula = assay ~ Diet` and `assay.type = relabundance`) in
@@ -567,7 +569,7 @@ This exercise prompts you to implement a workflow with distance-based RDA
 (dbRDA). You can refer to chapter \@ref(dbrda-workflow) for a step-by-step
 walkthrough, which may be simplified in the future.
 
-1. Import the mia and vegan packages, load peerj13075 with `data` and store it
+1. Import the mia and vegan packages, load any of the example data sets mentioned in Chapter 3.3 with `data` and store it
    into a variable named `tse`.
 4. Create dbRDA with Bray-Curtis dissimilarities on relative abundances. Use PERMANOVA. Can differences between samples be explained with variables of sample meta data? 
 5. Analyze diets' association on beta diversity. Calculate dbRDA and then PERMANOVA. Visualize coefficients. Which taxa's abundances differ the most between samples? 
@@ -580,8 +582,8 @@ Useful functions: runMDS, runRDA, anova.cca, transformAssay, mergeFeaturesByRank
 
 ### Standard analysis with ALDEx2
 
-1. Import the mia and ALDEx2 packages, load peerj13075 with `data` and store it
-   into a variable named `tse`.
+1. Import the mia and ALDEx2 packages, load any of the example data sets mentioned in Chapter 3.3
+   with `data` and store it into a variable named `tse`.
 2. Agglomerate the TreeSE by genus and filter by a prevalence of 10%. You can
    perform both operations in one go with `subsetByPrevalentFeatures` by specifying
    the `rank` and `prevalence` arguments.
@@ -600,8 +602,8 @@ Useful functions: runMDS, runRDA, anova.cca, transformAssay, mergeFeaturesByRank
 
 ### Controlling for confounders {#control-daa-confounders}
 
-1. Import the mia and MicrobiomeStat packages, load peerj13075 with `data` and
-   store it into a variable named `tse`.
+1. Import the mia and MicrobiomeStat packages, load any of the example data sets mentioned in Chapter 3.3
+   with `data` and store it into a variable named `tse`.
 2. Agglomerate the TreeSE by genus and filter by a prevalence of 10%. You can
    perform both operations in one go with `subsetByPrevalentFeatures` by specifying
    the `rank` and `prevalence` arguments.
@@ -622,8 +624,8 @@ Here, we conduct DAA with identical parameters as in the
 [previous exercise](#control-daa-confounders), but with a different method,
 namely ZicoSeq. We aim to compare the results between these two methods and draw better informed conclusions from such comparative approach.
 
-1. Import the mia and GUniFrac packages, load peerj13075 with `data` and
-   store it into a variable named `tse`.
+1. Import the mia and GUniFrac packages, load any of the example data sets mentioned in Chapter 3.3
+   with `data` and store it into a variable named `tse`.
 2. Agglomerate the TreeSE by genus and filter by a prevalence of 10%. You can
    perform both operations in one go with `subsetByPrevalentFeatures` by specifying
    the `rank` and `prevalence` arguments.
