It is maybe more clear to put this link to find the packages ?

--- a/04_containers.Rmd
+++ b/04_containers.Rmd
@@ -260,7 +260,7 @@ conversions from the alternative `phyloseq` container to the
 `TreeSummarizedExperiment` container.
 
 List the [available
-datasets](https://microbiome.github.io/mia/reference/index.html) in
+datasets](https://microbiome.github.io/mia/reference/mia-datasets.html) in
 the `mia` package:
 
 
