#355: Add new data resource
Signed-off-by: Daena Rys <rysdaena8@gmail.com>

--- a/04_containers.Rmd
+++ b/04_containers.Rmd
@@ -347,7 +347,25 @@ library(curatedMetagenomicData)
 tse <- curatedMetagenomicData("Vatanen*", dryrun = FALSE, counts = TRUE)
 ```
 
+###  Human microbiome compendium
 
+[MicroBioMap](https://seandavi.github.io/MicroBioMap/) dataset includes 
+over 170k samples of publicly available 16S rRNA amplicon sequencing data, 
+all processed using the same pipeline and reference database[@Abdill2023].
+
+Load the compendium using:
+
+```{r, message=FALSE, eval=FALSE}
+library(MicroBioMap)
+cpd <- getCompendium()
+```
+
+The resulting object is a TreeSummarizedExperiment object. Currently, 
+the "tree" part of the TreeSummarizedExperiment is not populated, but 
+that is on the roadmap[@compendiumpackage].
+
+After loading the compendium, you will have immediate access to nearly 
+170,000 microbiome samples.
 
 ### Other data sources
 
