--- a/book.bib
+++ b/book.bib
@@ -1458,3 +1458,23 @@ https://github.com/thomasp85/patchwork},
   publisher = {Cold Spring Harbor Laboratory},
   doi = {10.1101/2023.06.23.546313}
 }
+
+@article {Abdill2023,
+	author = {Richard J. Abdill and Samantha P. Graham and Vincent Rubinetti and Frank W. Albert and Casey S. Greene and Sean Davis and Ran Blekhman},
+	title = {Integration of 168,000 samples reveals global patterns of the human gut microbiome},
+	elocation-id = {2023.10.11.560955},
+	year = {2023},
+	doi = {10.1101/2023.10.11.560955},
+	publisher = {Cold Spring Harbor Laboratory},
+	URL = {https://www.biorxiv.org/content/early/2023/10/11/2023.10.11.560955},
+	eprint = {https://www.biorxiv.org/content/early/2023/10/11/2023.10.11.560955.full.pdf},
+	journal = {bioRxiv}
+}
+
+@Manual{compendiumpackage,
+  title = {MicroBioMap: Access the microbiome compendium from R},
+  author = {Sean Davis and Richard Abdill and Ran Blehkman and Samantha Graham and Casey Greene},
+  year = {2023},
+  note = {R package version 0.99.13},
+  url = {https://seandavi.github.io/MicroBioMap/},
+}
