--- a/24_clustering.qmd
+++ b/24_clustering.qmd
@@ -117,6 +117,8 @@ transformation (as seen in the previous example).
 
 ```{r}
 #| label = "hclust2"
+library(bluster)
+
 # Apply transformation
 tse <- transformAssay(tse, method = "relabundance")
 
