--- a/04_containers.Rmd
+++ b/04_containers.Rmd
@@ -352,20 +352,18 @@ tse <- curatedMetagenomicData("Vatanen*", dryrun = FALSE, counts = TRUE)
 [MicroBioMap](https://seandavi.github.io/MicroBioMap/) dataset includes 
 over 170k samples of publicly available 16S rRNA amplicon sequencing data, 
 all processed using the same pipeline and reference database[@Abdill2023].
-
-Load the compendium using:
+After installing the MicroBioMap package (see the [original website](https://github.com/seandavi/MicroBioMap#microbiome-compendium) for instructions), you can load the compendium with
 
 ```{r, message=FALSE, eval=FALSE}
 library(MicroBioMap)
 cpd <- getCompendium()
 ```
 
-The resulting object is a TreeSummarizedExperiment object. Currently, 
+This returns a TreeSummarizedExperiment object. Currently, 
 the "tree" part of the TreeSummarizedExperiment is not populated, but 
 that is on the roadmap[@compendiumpackage].
 
-After loading the compendium, you will have immediate access to nearly 
-170,000 microbiome samples.
+After loading the compendium, you will have immediate access to nearly 170,000 microbiome samples of publicly available 16S rRNA amplicon sequencing data, all processed using the same pipeline and reference database. For more use examples in R/Bioconductor, see the [MicroBioMap vignette](https://seandavi.github.io/MicroBioMap/articles/overview.html).
 
 ### Other data sources
 
