--- a/book.bib
+++ b/book.bib
@@ -1472,7 +1472,7 @@ https://github.com/thomasp85/patchwork},
 }
 
 @Manual{compendiumpackage,
-  title = {MicroBioMap: Access the microbiome compendium from R},
+  title = {{MicroBioMap}: Access the microbiome compendium from {R},
   author = {Sean Davis and Richard Abdill and Ran Blehkman and Samantha Graham and Casey Greene},
   year = {2023},
   note = {R package version 0.99.13},
