--- a/98_exercises.Rmd
+++ b/98_exercises.Rmd
@@ -208,7 +208,7 @@ functions explained in chapter \@ref(import-from-file). You can also check the
 ### Preliminary exploration
 
 1. Import the mia package, load any of the example data sets mentioned in Chapter 3.3
-   with `data` and store it into a variable named `tse`.
+   and store it into a variable named `tse`.
 2. Get a summary about the TreeSE with `summary`. What is the mean count across
    samples? How many features recur only once (singletons)?
 3. Check the dimensions of the TreeSE with `dim` or alternatively with `nrow`
@@ -222,7 +222,7 @@ functions explained in chapter \@ref(import-from-file). You can also check the
 ### Assay retrieval
 
 1. Import the mia package, load any of the example data sets mentioned in Chapter 3.3
-   with `data` and store it into a variable named `tse`.
+   and store it into a variable named `tse`.
 2. List the names of all available assays with `assayNames`.
 3. Fetch the list of assays with `assays`.
 4. Retrieve the first assay of the TreeSE with `assay`, where the second
@@ -235,7 +235,7 @@ got stuck, you can refer to chapter \@ref(assay-slot) of this book.
 ### Sample information 
 
 1. Import the mia package, load any of the example data sets mentioned in Chapter 3.3
-   with `data` and store it into a variable named `tse`.
+   and store it into a variable named `tse`.
 2. Check the names of the samples with `colnames`.
 3. List the information on samples available in colData with `names`.
 4. Visualize the colData with `View` and briefly look at the information stored
@@ -246,7 +246,7 @@ got stuck, you can refer to chapter \@ref(assay-slot) of this book.
 ### Feature information
 
 1. Import the mia package, load any of the example data sets mentioned in Chapter 3.3
-   with `data` and store it into a variable named `tse`.
+   and store it into a variable named `tse`.
 2. Check the names of the features with `rownames`.
 3. List the information on features available in rowData with `names`.
 4. Visualize the rowData with `View` and briefly look at the information stored
@@ -263,11 +263,11 @@ row trees, respectively.
 
 ### Other elements
 
-Try to extract some of the other TreeSE elements listed in chapter \@ref(containers).
+Extract some of the other TreeSE elements listed in chapter \@ref(containers).
 However, such data are not always included.
 
 1. Import the mia package, load any of the example data sets mentioned in Chapter 3.3
-   with `data` and store it into a variable named `tse`.
+   and store it into a variable named `tse`.
 2. Fetch the metadata of the TreeSE. Is there any iformation available?
 3. Access the phylogenetic tree with `rowTree`. How big is it in terms of tips
    and nodes. If you like you can visualize it with `ggtree`.
@@ -322,7 +322,7 @@ Useful functions: nrow, ncol, dim, summary, table, quantile, unique, transformAs
 ### Assay transformation
 
 1. Import the mia package, load any of the example data sets mentioned in Chapter 3.3
-   with `data` and store it into a variable named `tse`.
+   and store it into a variable named `tse`.
 2. Transform the counts assay into relative abundances with `transformAssay` and
    store it into the TreeSE as an assay named `relabund` (see chapter \@ref(assay-transform)).
 3. Similarly, perform a clr transformation on the counts assay with a `pseudocount`
@@ -340,7 +340,7 @@ Useful functions: nrow, ncol, dim, summary, table, quantile, unique, transformAs
 ### Taxonomic levels
 
 1. Import the mia package, load one of the example data sets mentioned in Chapter 3.3
-   with `data` (you need one with taxonomic information at Phylum level)
+   (you need one with taxonomic information at Phylum level)
    and store it into a variable named `tse`.
 2. List the available taxonomic ranks in the data with `taxonomyRanks`.
 3. Agglomerate the data to Phylum level with `mergeFeaturesByRank` and the
@@ -356,10 +356,10 @@ Useful functions: nrow, ncol, dim, summary, table, quantile, unique, transformAs
 ### Alternative experiments
 
 1. Import the mia package, load one of the example data sets mentioned in Chapter 3.3
-   with `data` (you need one with taxonomic information) and store it into 
+   (you need one with taxonomic information) and store it into 
    a variable named `tse`.
-2. Check the taxonomic ranks of the features with `taxonomyRanks`. What is the
-   deepest taxonomic rank available?
+2. Check the taxonomic ranks of the features with `taxonomyRanks`. Can you find the same
+   taxonomyRanks from `rowData` ? What is the deepest taxonomic rank available?
 3. Agglomerate the TreeSE to each taxonomic rank and store the resulting
    experiments as altExps. This can be performed automatically with `splitByRanks`.
 4. Check the names of the generated altExps with `altExpNames` and retrieve a
@@ -374,7 +374,7 @@ Useful functions: nrow, ncol, dim, summary, table, quantile, unique, transformAs
 ### Estimation
 
 1. Import the mia package, load any of the example data sets mentioned in Chapter 3.3
-   with `data` and store it into a variable named `tse`.
+   and store it into a variable named `tse`.
 2. Calculate multiple alpha diversity indices with `estimateDiversity` without
    any additional arguments.
 3. Check the names of colData with `names`. Can you identify which columns
@@ -387,7 +387,7 @@ Useful functions: nrow, ncol, dim, summary, table, quantile, unique, transformAs
 ### Visualization 
 
 1. Import the mia and scater packages, load any of the example data sets mentioned in Chapter 3.3
-   with `data` and store it into a variable named `tse`.
+   and store it into a variable named `tse`.
 2. Calculate Shannon diversity index and Faith's phylogenetic diversity with
    `estimateDiversity` and the appropriate arguments for `index`.
 3. Make a boxplot of Shannon diversity on the y axis and sample type on the x
@@ -402,7 +402,7 @@ Useful functions: nrow, ncol, dim, summary, table, quantile, unique, transformAs
 ### Correlation
 
 1. Import the mia and scater packages, load any of the example data sets mentioned in Chapter 3.3
-   with `data` and store it into a variable named `tse`.
+   and store it into a variable named `tse`.
 2. Calculate coverage and Shannon diversity index with `estimateDiversity` and
     the appropriate arguments for `index`.
 4. Test the correlation between the two indices with `cor.test`. Remember that
@@ -425,7 +425,7 @@ represent an important analysis in several studies.
 ### Differences between groups
 
 1. Import the mia package, load any of the example data sets mentioned in Chapter 3.3
-   with `data` and store it into a variable named `tse`.
+   and store it into a variable named `tse`.
 2. Calculate the Gini-Simpson diversity with `estimateDiversity` and the
    appropriate argument for `index`. Set `name` to `simpson`. You will use this
    name to access the diversity index from colData.
@@ -447,7 +447,7 @@ represent an important analysis in several studies.
 
 ### Reduced dimensions retrieval
 
-1. Import the mia package, load enterotype with `data` and store it into a
+1. Import the mia package, load enterotype and store it into a
    variable named `tse`.
 2. List all available reduced dimensions with `reducedDims`. At this point, no
    reducedDims are likely found, because we haven't created any yet.
@@ -463,7 +463,7 @@ represent an important analysis in several studies.
 
 ### Visualization basics with PCA
 
-1. Import the mia and scater packages, load enterotype with `data` and store it
+1. Import the mia and scater packages, load enterotype and store it
    into a variable named `tse`.
 2. Perform a 3-component PCA based on the `counts` assay. You can use `runPCA`
    and set the optional arguments `ncomponents` and `assay.type` to the
@@ -488,7 +488,7 @@ unlike PCA it can generate reduced dimensions from distances other than
 Euclidean. There are several ecological distances to choose from and you can
 find many of them under methods in the vignettes of `vegan::vegdist`.
 
-1. Import the mia and scater packages, load enterotype with `data` and store it
+1. Import the mia and scater packages, load enterotype and store it
    into a variable named `tse`.
 2. Transform the counts assay to relative abundances with `transformAssay`.
 3. Perform a Multi-Dimensional Scaling (MDS) based on the relative abundance
@@ -515,7 +515,7 @@ PERMANOVA (point 4) and the homogeneity assumption is also be controlled with a
 PERMDISP2 analysis (point 5).
 
 1. Import the mia and vegan packages, load any of the example data sets mentioned in Chapter 3.3
-   with `data` and store it into a variable named `tse`.
+   and store it into a variable named `tse`.
 2. Transform the `counts` assay into relative abundances with `transformAssay`.
 3. Extract the relative abundance assay, transpose it and save it into
    a variable named `relabund_assay`.
@@ -545,7 +545,7 @@ exercise. This is a relatively complex procedure, but the way this is broken
 down into steps below will hopefully make more sense.
 
 1. Import the mia and vegan packages, load any of the example data sets mentioned in Chapter 3.3
-   with `data` and store it into a variable named `tse`.
+   and store it into a variable named `tse`.
 2. Transform the `counts` assay into relative abundances with `transformAssay`.
 3. Perform RDA with `calculateRDA` to see how much Diet can explain the relative
    abundance assay (`formula = assay ~ Diet` and `assay.type = relabundance`) in
@@ -570,7 +570,7 @@ This exercise prompts you to implement a workflow with distance-based RDA
 walkthrough, which may be simplified in the future.
 
 1. Import the mia and vegan packages, load any of the example data sets mentioned in Chapter 3.3
-   with `data` and store it into a variable named `tse`.
+and store it into a variable named `tse`.
 4. Create dbRDA with Bray-Curtis dissimilarities on relative abundances. Use PERMANOVA. Can differences between samples be explained with variables of sample meta data? 
 5. Analyze diets' association on beta diversity. Calculate dbRDA and then PERMANOVA. Visualize coefficients. Which taxa's abundances differ the most between samples? 
 6. Interpret your results. Is there association between community composition and location? What are those taxa that differ the most; find information from literature.
@@ -583,7 +583,7 @@ Useful functions: runMDS, runRDA, anova.cca, transformAssay, mergeFeaturesByRank
 ### Standard analysis with ALDEx2
 
 1. Import the mia and ALDEx2 packages, load any of the example data sets mentioned in Chapter 3.3
-   with `data` and store it into a variable named `tse`.
+   and store it into a variable named `tse`.
 2. Agglomerate the TreeSE by genus and filter by a prevalence of 10%. You can
    perform both operations in one go with `subsetByPrevalentFeatures` by specifying
    the `rank` and `prevalence` arguments.
@@ -603,7 +603,7 @@ Useful functions: runMDS, runRDA, anova.cca, transformAssay, mergeFeaturesByRank
 ### Controlling for confounders {#control-daa-confounders}
 
 1. Import the mia and MicrobiomeStat packages, load any of the example data sets mentioned in Chapter 3.3
-   with `data` and store it into a variable named `tse`.
+   and store it into a variable named `tse`.
 2. Agglomerate the TreeSE by genus and filter by a prevalence of 10%. You can
    perform both operations in one go with `subsetByPrevalentFeatures` by specifying
    the `rank` and `prevalence` arguments.
@@ -625,7 +625,7 @@ Here, we conduct DAA with identical parameters as in the
 namely ZicoSeq. We aim to compare the results between these two methods and draw better informed conclusions from such comparative approach.
 
 1. Import the mia and GUniFrac packages, load any of the example data sets mentioned in Chapter 3.3
-   with `data` and store it into a variable named `tse`.
+   and store it into a variable named `tse`.
 2. Agglomerate the TreeSE by genus and filter by a prevalence of 10%. You can
    perform both operations in one go with `subsetByPrevalentFeatures` by specifying
    the `rank` and `prevalence` arguments.
@@ -697,7 +697,7 @@ See the OMA book for examples.
 Here we learn how to conduct preliminary exploration on a MAE, using
 HintikkaXOData as an example dataset.
 
-1. Import the mia package, load HintikkaXOData with `data` and store it into a
+1. Import the mia package, load HintikkaXOData and store it into a
    variable named `mae`.
 2. Which experiments make up the MAE? How many samples and features are contained
    by each experiment? You can get a summary for all experiments with `experiments`,
@@ -718,7 +718,7 @@ information is organized in its internal structure.
 Here we learn how to manipulate an experiment contained by a MAE and save the
 new modified version of the experiment in a suitable place (the altExp slot).
 
-1. Import the mia package, load HintikkaXOData with `data` and store it into a
+1. Import the mia package, load HintikkaXOData and store it into a
    variable named `mae`.
 2. Agglomerate the microbiota experiment by Genus and store the output into the
    `altExp` slot of the microbiota experiment, with the custom name
@@ -738,7 +738,7 @@ an alternative experiment.
 We proceed with an exercise on a different type of data manipulation, that is,
 transformation of assays of individual experiments in the MAE.
 
-1. Import the mia package, load HintikkaXOData with `data` and store it into a
+1. Import the mia package, load HintikkaXOData and store it into a
    variable named `mae`.
 2. What assays are contained by each individual experiment? You can check their
    names with `assays`.
@@ -758,7 +758,7 @@ The following exercise walks you through disassembling a MAE object in
 order to retrieve a specific assay, or to store its components as
 multiple separate csv files.
 
-1. Import the mia package, load HintikkaXOData with `data` and store it into a
+1. Import the mia package, load HintikkaXOData and store it into a
    variable named `mae`.
 2. Extract the individual metabolite experiment from the MAE into a distinct
    TreeSE object named `metabolites`.
@@ -809,7 +809,7 @@ analytical exercises.
 Now we will perform a cross-correlation analysis between two of the
 experiments in the MAE.
 
-1. Import the mia package, load HintikkaXOData with `data` and store it into a
+1. Import the mia package, load HintikkaXOData and store it into a
    variable named `mae`.
 2. Analyze correlations between the microbiota and the biomarkers experiments
    with `getExperimentCrossAssociation`. Don't forget to specify the experiments
