--- a/99_bibliography.qmd
+++ b/99_bibliography.qmd
@@ -1,4 +1,8 @@
-`r if (knitr::is_html_output()) '
+--- 
+bibliography: [book.bib]
+biblio-style: apalike
+link-citations: true
+always_allow_html: yes
+---
 # Bibliography {-}
-'`
 
