--- a/index.qmd
+++ b/index.qmd
@@ -20,6 +20,17 @@ url: "`r .gh_url`"
 ---
 
 
+<script>
+// JavaScript code to inject HTML content
+document.write(`
+  <div id="header">
+    <img src="https://user-images.githubusercontent.com/60338854/128359392-6feef8df-30e9-4ea0-ae3b-4bb619d746ed.png" alt="Microbiome" width="50%" />
+    <p style="font-size:12px">Figure source: Moreno-Indias <i>et al</i>. (2021) <a href="https://doi.org/10.3389/fmicb.2021.635781">Statistical and Machine Learning Techniques in Human Microbiome Studies: Contemporary Challenges and Solutions</a>. Frontiers in Microbiology 12:11.</p>
+  </div>
+`);
+</script>
+
+
 # Welcome {-}
 
 You are reading the online book, [**Orchestrating Microbiome Analysis
@@ -63,31 +74,31 @@ Attribution-NonCommercial
 3.0](https://creativecommons.org/licenses/by-nc/3.0/us/) License.
 
 
---------------
+<!-- -------------- -->
 
-```{r}
-#| include = FALSE
-library(Cairo)
+<!-- ```{r} -->
+<!-- #| include = FALSE -->
+<!-- library(Cairo) -->
 
-# global knitr options
-knitr::opts_chunk$set(
-  fig.width=10,
-  dpi=300,
-  dev = "png",
-  dev.args = list(type = "cairo-png")
-)
-```
+<!-- # global knitr options -->
+<!-- knitr::opts_chunk$set( -->
+<!--   fig.width=10, -->
+<!--   dpi=300, -->
+<!--   dev = "png", -->
+<!--   dev.args = list(type = "cairo-png") -->
+<!-- ) -->
+<!-- ``` -->
 
-```{js}
-// This block adds image to the front page
-title=document.getElementById('header');
-title.innerHTML = title.innerHTML + 
+<!-- ```{js} -->
+<!-- // This block adds image to the front page -->
+<!-- title=document.getElementById('header'); -->
+<!-- title.innerHTML = title.innerHTML + -->
 
-'<img src="https://user-images.githubusercontent.com/60338854/128359392\
--6feef8df-30e9-4ea0-ae3b-4bb619d746ed.png" alt="Microbiome" width="50%"/>' +
+<!-- '<img src="https://user-images.githubusercontent.com/60338854/128359392\ -->
+<!-- -6feef8df-30e9-4ea0-ae3b-4bb619d746ed.png" alt="Microbiome" width="50%"/>' + -->
 
-'<p style="font-size:12px">Figure source: Moreno-Indias <i>et al</i>. (2021) \
-<a href="https://doi.org/10.3389/fmicb.2021.635781">Statistical and \
-Machine Learning Techniques in Human Microbiome Studies: Contemporary \
-Challenges and Solutions</a>. Frontiers in Microbiology 12:11.</p>'
-```
+<!-- '<p style="font-size:12px">Figure source: Moreno-Indias <i>et al</i>. (2021) \ -->
+<!-- <a href="https://doi.org/10.3389/fmicb.2021.635781">Statistical and \ -->
+<!-- Machine Learning Techniques in Human Microbiome Studies: Contemporary \ -->
+<!-- Challenges and Solutions</a>. Frontiers in Microbiology 12:11.</p>' -->
+<!-- ``` -->
