biocbook: add book assets

--- a/inst/assets/bibliography.bib
+++ b/inst/assets/bibliography.bib
@@ -1,3 +1,38 @@
+@Manual{serizay2023,
+    title = {BiocBook: Write, publish and maintain versioned Quarto books with Bioconductor},
+    author = {Jacques Serizay},
+    year = {2023},
+    note = {R package version 0.99.0},
+    url = {https://github.com/js2264/BiocBook},
+}
+
+@Manual{lun2023,
+    title = {rebook: Re-using Content in Bioconductor Books},
+    author = {Aaron Lun},
+    year = {2023},
+    note = {R package version 1.11.1},
+    url = {https://bioconductor.org/packages/rebook},
+    doi = {10.18129/B9.bioc.rebook},
+}
+
+@software{Allaire_Quarto_2022,
+author = {Allaire, J.J. and Teague, Charles and Scheidegger, Carlos and Xie, Yihui and Dervieux, Christophe},
+doi = {10.5281/zenodo.5960048},
+month = jan,
+title = {{Quarto}},
+url = {https://github.com/quarto-dev/quarto-cli},
+version = {1.2},
+year = {2022}
+}
+
+@Manual{Wickham2022,
+    title = {devtools: Tools to Make Developing R Packages Easier},
+    author = {Hadley Wickham and Jim Hester and Winston Chang and Jennifer Bryan},
+    year = {2022},
+    note = {R package version 2.4.5},
+    url = {https://CRAN.R-project.org/package=devtools},
+}
+
 @Article{Anderson2001,
   author =	 {Anderson, Marti J.},
   title =	 {A new method for non-parametric multivariate
